# FastBuckets

./: CHANGELOG.md  README.md  pyproject.toml
src/fastbuckets/: __init__.py
