[project]
name = "fastbuckets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.12",
    "asyncio>=3.4.3",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic>=2.11.6",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "structlog>=25.4.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "nox>=2025.5.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "sphinx>=8.2.3",
    "ty>=0.0.1a9",
]
